--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -3,8 +3,8 @@
     "my_name_is": "I am",
     "i_am_full": "I am a student at 1337 School, specializing in backend development and DevOps engineering.",
   
-    "about": "ABOUT",
-    "bio": "<p>Bonjour, je m'appelle Younes Ismaili, étudiant à l'école 1337, spécialisé dans le <b>développement Backend et DevOps</b>. Mon cœur bat au rythme de la musique pop, alimentant mon inspiration pour créer des merveilles artistiques. Je suis un éternel apprenant, toujours désireux d'approfondir mes connaissances dans les technologies émergentes et l'art du codage créatif.</p>",
+    "about": "About",
+    "bio": "<p>Hello, I'm Younes Ismaili, a student at 1337 School, specializing in <b>ackend Development and DevOps</b>. My heart beats to the rhythm of pop music, fueling my inspiration to craft artistic wonders. I'm an eternal learner, always eager to delve deeper into emerging technologies and the art of creative coding.</p>",
     "experiences": "Experiences",
     "blog": "Blog",
   
