--- a/src/locale/fr.json
+++ b/src/locale/fr.json
@@ -3,8 +3,8 @@
     "my_name_is": "Je m'appelle",
     "i_am_full": "Je suis étudiant à l'école 1337, spécialisé dans le développement backend et l'ingénierie DevOps.",
   
-    "about": "À PROPOS",
-    "bio": "<p>Salut, je m'appelle Younes Ismaili. Je suis une personne créative, spécialisée dans <b>la conception graphique</b>, <b>la conception UX/UI</b> et <b>le développement web</b>. Mon cœur bat au rythme de la musique pop, alimentant mon inspiration pour créer des merveilles artistiques. Je suis un éternel apprenant, toujours désireux de plonger plus profondément dans les technologies émergentes et l'art de la programmation créative.</p>",
+    "about": "À propos",
+    "bio": "<p>Bonjour, je m'appelle Younes Ismaili, étudiant à l'école 1337, spécialisé dans le <b>développement Backend et DevOps</b>. Mon cœur bat au rythme de la musique pop, alimentant mon inspiration pour créer des merveilles artistiques. Je suis un éternel apprenant, toujours désireux d'approfondir mes connaissances dans les technologies émergentes et l'art du codage créatif.</p>",
     "experiences": "Expériences",
     "blog": "Blog",
   
